增加繁中语言，修复变量显示问题

--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -20,8 +20,9 @@
   },
   "header": {
     "language": "语言",
-    "chinese": "中文",
-    "english": "EN"
+    "chinese": "简中",
+    "english": "EN",
+    "chinese_tw": "繁中"
   },
   "home": {
     "title": "服务器管理",
