--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -20,8 +20,9 @@
   },
   "header": {
     "language": "Language",
-    "chinese": "中文",
-    "english": "EN"
+    "chinese": "简中",
+    "english": "EN",
+    "chinese_tw": "繁中"
   },
   "home": {
     "title": "Server Management",
