--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -7,6 +7,7 @@
     "config_edit": "配置編輯",
     "player_manage": "玩家管理",
     "settings": "設定",
+    "personalize": "個人化",
     "about": "關於",
     "loading": "載入中..."
   },
