--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -7,7 +7,7 @@
     "config_edit": "Config Edit",
     "player_manage": "Player Manage",
     "settings": "Settings",
-    "personalize": "Personalize"
+    "personalize": "Personalize",
     "about": "About",
     "loading": "Loading..."
   },
