lang:增加了东北话语言

--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -22,7 +22,8 @@
     "language": "語言",
     "chinese": "簡中",
     "english": "EN",
-    "chinese_tw": "繁中"
+    "chinese_tw": "繁中",
+    "chinese_dongbei": "东北话"
   },
   "home": {
     "title": "伺服器管理",
