--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -22,7 +22,8 @@
     "language": "Language",
     "chinese": "简中",
     "english": "EN",
-    "chinese_tw": "繁中"
+    "chinese_tw": "繁中",
+    "chinese_dongbei": "东北话"
   },
   "home": {
     "title": "Server Management",
