--- a/src/locales/zh-NE.json
+++ b/src/locales/zh-NE.json
@@ -1,14 +1,14 @@
 {
   "common": {
     "app_name": "Sea Lantern",
-    "home": "首页",
-    "create_server": "创建服务器",
-    "console": "控制台",
-    "config_edit": "配置编辑",
-    "player_manage": "玩家管理",
+    "home": "主页",
+    "create_server": "整个服务器",
+    "console": "终端",
+    "config_edit": "改下配置",
+    "player_manage": "整理玩家",
     "settings": "设置",
-    "about": "关于",
-    "loading": "加载中..."
+    "about": "信息",
+    "loading": "加载呢，憋着急奥..."
   },
   "sidebar": {
     "groups": {
@@ -16,57 +16,57 @@
       "server": "服务器",
       "system": "系统"
     },
-    "collapse_btn": "收起侧栏"
+    "collapse_btn": "改起侧栏"
   },
   "header": {
     "language": "语言",
-    "chinese": "简中",
-    "english": "EN",
+    "chinese": "普通话",
+    "english": "洋文",
     "chinese_tw": "繁中",
     "chinese_dongbei": "东北话"
   },
   "home": {
-    "title": "服务器管理",
-    "no_servers": "暂无服务器",
-    "create_first": "创建你的第一个服务器",
+    "title": "管理服务器",
+    "no_servers": "没有服务器奥",
+    "create_first": "来创建第一个服务器吧",
     "start": "启动",
     "stop": "停止",
     "edit": "编辑",
     "delete": "删除",
     "status": "状态",
-    "running": "运行中",
+    "running": "正在运行",
     "stopped": "已停止",
     "starting": "启动中",
     "stopping": "停止中",
-    "error": "异常",
+    "error": "错误",
     "system_resources": "系统资源",
-    "detail_view": "切换到详细视图",
-    "gauge_view": "切换到仪表盘",
+    "detail_view": "来到详细视图",
+    "gauge_view": "来到仪表盘",
     "recent_alerts": "最近警告 / 错误"
   },
   "create": {
-    "title": "创建服务器",
-    "jar_file": "服务端 JAR 文件",
+    "title": "新建服务器",
+    "jar_file": "服务端 闸儿 文件",
     "browse": "浏览",
-    "java_version": "Java 版本",
-    "select_java": "选择 Java",
-    "server_name": "服务器名称",
+    "java_version": "佳娃 版本",
+    "select_java": "选择 佳娃",
+    "server_name": "服务器主机名称",
     "server_path": "服务器路径",
     "create": "创建",
-    "max_memory": "最大内存 (MB)",
-    "min_memory": "最小内存 (MB)",
+    "max_memory": "最大内存 (爱慕闭)",
+    "min_memory": "最小内存 (爱慕闭)",
     "online_mode": "正版验证",
     "online_mode_on": "已开启",
     "online_mode_off": "已关闭",
     "cancel": "取消",
     "scanning": "正在扫描所有磁盘...",
-    "no_java": "未检测到 Java，请点击下方按钮扫描",
-    "java_found": "找到 {{count}} 个 Java",
+    "no_java": "未检测到 佳娃，请点击下方按钮扫描",
+    "java_found": "找到 {{count}} 个 佳娃",
     "rescan": "重新扫描",
-    "default_port_placeholder": "默认 25565",
-    "java_env": "Java 环境",
-    "java_scan": "扫描系统中所有磁盘的 Java 安装",
-    "java_manual": "手动选择 Java 路径"
+    "default_port_placeholder": "默认 贰伍伍伍陆",
+    "java_env": "佳娃 环境",
+    "java_scan": "扫描系统中所有磁盘的 佳娃 安装",
+    "java_manual": "手动选择 佳娃 路径"
   },
   "console": {
     "title": "控制台",
@@ -88,7 +88,7 @@
       "all": "全部",
       "network": "网络",
       "player": "玩家",
-      "game": "游戏",
+      "game": "电动",
       "world": "世界",
       "performance": "性能",
       "display": "显示",
@@ -110,8 +110,8 @@
   "players": {
     "title": "玩家管理",
     "whitelist": "白名单",
-    "banned": "封禁",
-    "ops": "OP",
+    "banned": "踢人",
+    "ops": "管理员",
     "add": "添加",
     "remove": "移除",
     "select_server": "选择服务器",
@@ -120,17 +120,17 @@
     "online_players": "在线玩家",
     "server_offline": "服务器未运行",
     "no_players": "当前没有玩家在线",
-    "kick": "踢出",
+    "kick": "滚出去",
     "empty_whitelist": "白名单为空",
     "empty_banned": "封禁列表为空",
-    "ban": "封禁",
-    "unban": "解封",
+    "ban": "别让我再见到你",
+    "unban": "滚回来",
     "empty_ops": "管理员列表为空",
-    "deop": "取消OP",
+    "deop": "取消管理员",
     "ban_player": "封禁玩家",
     "add_op": "添加管理员",
     "player_name": "玩家名称",
-    "player_id": "输入玩家游戏ID",
+    "player_id": "输入玩家游戏艾迪",
     "ban_reason": "封禁原因（可选）",
     "ban_reason_placeholder": "输入原因",
     "cancel": "取消",
@@ -142,41 +142,41 @@
   "settings": {
     "title": "应用设置",
     "auto_stop": "关闭软件时自动停止服务器",
-    "auto_eula": "自动同意 EULA",
+    "auto_eula": "自动同意 易优拉协议",
     "default_memory": "默认内存",
     "default_port": "默认端口",
-    "jvm_args": "JVM 参数",
+    "jvm_args": "杰威姆 参数",
     "general": "通用",
-    "general_desc": "基本行为设置",
-    "auto_stop_desc": "退出 Sea Lantern 时自动向运行中的服务器发送 stop 命令，防止数据丢失",
-    "auto_eula_desc": "启动服务器前自动写入 eula=true，省去手动修改的步骤",
+    "general_desc": "基本动作设置",
+    "auto_stop_desc": "退出 Sea Lantern 时自动向运行中的服务器发送 停之 命令，防止数据丢失",
+    "auto_eula_desc": "启动服务器前自动写入 易优拉协议=出，省去手动修改的步骤",
     "server_defaults": "服务器默认值",
     "server_defaults_desc": "创建新服务器时使用的默认参数",
-    "max_memory_desc": "建议至少 1024MB。大型模组服可能需要 4096MB 以上",
-    "min_memory": "默认最小内存 (MB)",
-    "min_memory_desc": "建议设为最大内存的 1/4 到 1/2",
-    "default_java": "默认 Java 路径",
-    "default_java_desc": "留空则每次创建服务器时自动检测最合适的 Java",
+    "max_memory_desc": "建议至少 幺零贰肆爱慕闭。大型模组服可能需要 肆零玖琉爱慕闭 以上",
+    "min_memory": "默认最小内存 (爱慕闭)",
+    "min_memory_desc": "建议设为最大内存的 四分儿之一 到 一半",
+    "default_java": "默认 佳娃 路径",
+    "default_java_desc": "留空则每次创建服务器时自动检测最合适的 佳娃",
     "jvm_args_desc": "所有服务器启动时都会附加这些参数。适合设置 GC 优化参数",
-    "port_desc": "Minecraft 默认端口为 25565。多服务器需要不同端口",
+    "port_desc": "麦块 默认端口为 贰伍伍伍陆。多服务器需要不同端口",
     "jvm_args_placeholder": "-XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC",
     "console": "控制台",
     "console_desc": "控制台显示相关设置",
     "console_font_size": "控制台字体大小 (px)",
     "console_font_size_desc": "控制台日志文字的大小，默认 13",
     "max_log_lines": "最大日志行数",
-    "max_log_lines_desc": "单个服务器最多保留的日志行数，超出后自动清除旧日志。默认 5000",
+    "max_log_lines_desc": "单个服务器最多保留的日志行数，超出后自动清除旧日志。默认 五千",
     "appearance": "外观",
     "appearance_desc": "自定义软件背景和视觉效果",
     "theme": "主题模式",
     "theme_desc": "选择应用的主题外观，\"跟随系统\"会自动匹配系统的深色/浅色模式",
     "font_size": "文本大小",
-    "font_size_desc": "调整界面文本的大小",
+    "font_size_desc": "调整界面文本的大小，爸爸妈妈再也不担心我看不见屏幕了",
     "font_family": "字体",
     "font_family_desc": "选择界面使用的字体，部分字体需要系统已安装或从网络加载",
     "acrylic": "亚克力效果 (毛玻璃)",
     "acrylic_desc": "启用 Windows 系统级亚克力毛玻璃效果，与背景图片兼容",
-    "acrylic_not_supported": "当前系统不支持亚克力效果",
+    "acrylic_not_supported": "当前系统不支持亚克力效果，介咋还排斥macOS和Linux呢",
     "background": "背景图片",
     "background_desc": "上传一张图片作为软件背景，支持 PNG、JPG、WEBP 等格式",
     "opacity": "不透明度",
@@ -205,7 +205,7 @@
     "import": "导入",
     "reset": "恢复默认",
     "import_settings": "导入设置",
-    "import_desc": "粘贴之前导出的 JSON 数据",
+    "import_desc": "粘贴之前导出的 杰森 数据",
     "import_placeholder": "{\"close_servers_on_exit\": true, ...}",
     "cancel": "取消",
     "confirm_import": "导入",
@@ -220,25 +220,25 @@
     "no_json": "请粘贴 JSON",
     "import_title": "导入设置",
     "reset_title": "确认恢复默认",
-    "browse_java": "点击浏览选择 java.exe",
-    "browse_jar": "点击浏览选择 .jar 文件",
-    "server_name_placeholder": "输入名称"
+    "browse_java": "点击浏览选择 佳娃.易艾克斯易",
+    "browse_jar": "点击浏览选择 .闸儿 文件",
+    "server_name_placeholder": "请输入文本"
   },
   "about": {
     "title": "关于",
     "version": "版本",
     "check_update": "检查更新",
     "contributors": "贡献者",
-    "subtitle": "Minecraft 服务器管理工具",
+    "subtitle": "麦块 服务器管理工具",
     "tech_badge": "Tauri 2 + Vue 3",
     "license_badge": "GPLv3",
-    "hero_desc": "一个由社区共同打造的 Minecraft 开服器。\n不仅代码开源，连灵魂都由你们定义。",
+    "hero_desc": "一个由社区共同打造的 麦块 开服器。\n不仅代码开源，连灵魂都由你们定义。劲爆开源，人人叫好",
     "manifesto_title": "为什么叫 Sea Lantern？",
-    "manifesto_text1": "海晶灯（Sea Lantern）是 Minecraft 中一种发光方块——它由无数碎片组合而成，却能发出柔和而持久的光。",
+    "manifesto_text1": "海晶灯（Sea Lantern）是 麦块 中一种发光方块——它由无数碎片组合而成，却能发出柔和而持久的光。",
     "manifesto_text2": "就像这个项目一样，每一位贡献者都是一片海晶碎片。\n当我们聚在一起，就能照亮整个社区。",
     "contributor_wall": "贡献者墙",
     "contributor_desc": "每一个让这个项目变得更好的人",
-    "join_text": "你的名字",
+    "join_text": "你的名字君の名は",
     "join_desc": "参与贡献，加入我们",
     "project_info": "项目信息",
     "build_year": "构建年份",
@@ -255,7 +255,7 @@
     "way_doc": "写文档",
     "way_doc_desc": "完善教程和使用说明",
     "way_translate": "翻译",
-    "way_translate_desc": "帮助翻译成其他语言",
+    "way_translate_desc": "帮助翻译成其他语言，比如海盗语",
     "way_promote": "推广",
     "way_promote_desc": "分享给更多 MC 服主",
     "gitee_repo": "Gitee 仓库",
