--- a/src/locales/zh-NE.json
+++ b/src/locales/zh-NE.json
@@ -23,7 +23,9 @@
     "chinese": "普通话",
     "english": "洋文",
     "chinese_tw": "繁中",
-    "chinese_dongbei": "东北话"
+    "chinese_dongbei": "东北话",
+    "japanese" : "日本語",
+    "upsidedown": "ƎƃuɐuɐW"
   },
   "home": {
     "title": "管理服务器",
