--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -23,7 +23,20 @@
     "language": "語言",
     "chinese": "简体中文",
     "english": "English",
-    "chinese_tw": "繁體中文"
+    "chinese_tw": "繁體中文",
+    "japanese": "日本語",
+    "french": "Français",
+    "german": "Deutsch",
+    "russian": "Русский",
+    "arabic": "العربية",
+    "spanish": "Español",
+    "italian": "Italiano",
+    "portuguese": "Português",
+    "korean": "한국어",
+    "dutch": "Nederlands",
+    "polish": "Polski",
+    "turkish": "Türkçe",
+    "vietnamese": "Tiếng Việt"
   },
   "home": {
     "title": "伺服器管理",
@@ -67,7 +80,11 @@
     "default_port_placeholder": "預設 25565",
     "java_env": "Java 環境",
     "java_scan": "掃描系統中所有磁碟的 Java 安裝",
-    "java_manual": "手動選擇 Java 路徑"
+    "java_manual": "手動選擇 Java 路徑",
+    "select_version": "選擇伺服器版本",
+    "select_type": "選擇伺服器類型",
+    "server_type_text": "伺服器類型",
+    "selevt_version_text": "伺服器版本"
   },
   "console": {
     "title": "控制台",
