feat:简单托盘菜单

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -332,5 +332,10 @@
     "update_check_failed": "Failed to check updates",
     "update_download_failed": "Download failed",
     "github_repo": "GitHub Repository"
+  },
+  "tray": {
+    "minimize": "Minimize to Tray",
+    "show": "Show",
+    "quit": "Quit"
   }
 }
