lang:增加了天津话

--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -29,7 +29,8 @@
     "chinese_meow": "猫語",
     "spanish": "Español",
     "deutsch": "Deutsch",
-    "pirate": "Pirate"
+    "pirate": "Pirate",
+    "chinese_tj": "天津话"
   },
   "home": {
     "title": "サーバー管理",
