--- a/src/locales/zh-ME.json
+++ b/src/locales/zh-ME.json
@@ -29,7 +29,8 @@
     "chinese_meow": "喵语",
     "spanish": "Español",
     "deutsch": "Deutsch",
-    "pirate": "Pirate"
+    "pirate": "Pirate",
+    "chinese_tj": "天津话"
   },
   "home": {
     "title": "服服管理喵",
