--- a/src/locales/en-PT.json
+++ b/src/locales/en-PT.json
@@ -29,7 +29,8 @@
     "chinese_meow": "喵语",
     "spanish": "Español",
     "deutsch": "Deutsch",
-    "Pirate" : "Pirate"
+    "Pirate" : "Pirate",
+    "chinese_tj": "天津话"
   },
   "home": {
     "title": "Runnin' the Ship",
