lang:增加了川渝话

--- a/src/locales/zh-TJ.json
+++ b/src/locales/zh-TJ.json
@@ -32,7 +32,8 @@
     "pirate": "Pirate",
     "chinese_tj": "天津话",
     "cantonese": "粤语",
-    "russian": "Русский"
+    "russian": "Русский",
+    "chinese_cy": "川渝话"
   },
   "home": {
     "title": "管咱的服务器",
