--- a/src/locales/zh-ME.json
+++ b/src/locales/zh-ME.json
@@ -32,7 +32,9 @@
     "pirate": "Pirate",
     "chinese_tj": "天津话",
     "cantonese": "粤语",
-    "russian": "Русский"
+    "russian": "Русский",
+    "chinese_cy": "川渝话",
+    "chinese_wu": "吴语"
   },
   "home": {
     "title": "服服管理喵",
