--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -332,7 +332,11 @@
     "color_hue": "色相",
     "color_saturation": "饱和度",
     "color_lightness": "亮度",
-    "color_alpha": "透明度"
+    "color_alpha": "透明度",
+    "developer_mode": "开发者模式",
+    "developer_mode_desc": "启动高级功能和调试选项",
+    "developer_mode_toggle": "启动开发者模式",
+    "developer_mode_toggle_desc": "启用后将允许使用调试工具"
   },
   "about": {
     "title": "关于",
