--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -337,7 +337,11 @@
     "color_hue": "色相",
     "color_saturation": "飽和度",
     "color_lightness": "亮度",
-    "color_alpha": "透明度"
+    "color_alpha": "透明度",
+    "developer_mode": "開發者模式",
+    "developer_mode_desc": "啟用後將顯示高級設置和除錯工具",
+    "developer_mode_toggle": "啟用開發者模式",
+    "developer_mode_toggle_desc": "啟用後將允許使用除錯工具"
   },
   "about": {
     "title": "關於",
