lang:增加了河南话

--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -35,7 +35,8 @@
     "russian": "Русский",
     "chinese_cy": "川渝话",
     "chinese_wu": "吴语",
-    "chinese_hokkien": "闽南语"
+    "chinese_hokkien": "闽南语",
+    "chinese_hn" : "河南话"
   },
   "home": {
     "title": "サーバー管理",
