--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -10,8 +10,82 @@
     "personalize": "Personalize",
     "about": "About",
     "loading": "Loading...",
-    "select_server": "Select server",
-    "open_folder": "Open Folder"
+    "select_server": "Select Server",
+    "open_folder": "Open Folder",
+    "select": "Please select",
+    "search": "Search...",
+    "search_options": "Search options",
+    "no_match": "No matching items found",
+    "close_modal": "Close modal",
+    "close_notification": "Close notification",
+    "server_status_stopped": "Stopped",
+    "server_status_starting": "Starting",
+    "server_status_running": "Running",
+    "server_status_stopping": "Stopping",
+    "server_status_error": "Error",
+    "message_server_started": "Server started",
+    "message_server_stopped": "Server stopped",
+    "message_command_sent": "Command sent",
+    "message_whitelist_added": "Added to whitelist",
+    "message_whitelist_removed": "Removed from whitelist",
+    "message_player_banned": "Player banned",
+    "message_player_unbanned": "Player unbanned",
+    "message_op_added": "OP privileges added",
+    "message_op_removed": "OP privileges removed",
+    "message_player_kicked": "Player kicked",
+    "message_server_not_running": "Server not running",
+    "message_server_already_running": "Server already running",
+    "message_server_not_found": "Server not found",
+    "message_invalid_player_name": "Invalid player name",
+    "message_network_error": "Network error",
+    "message_unknown_error": "Unknown error",
+    "message_select_server": "Please select a server",
+    "message_server_required": "Server must be running to operate",
+    "message_enter_player_name": "Please enter player name",
+    "message_player_name_length": "Player name must be between 3-16 characters",
+    "message_player_name_invalid": "Player name can only contain letters, numbers, and underscores",
+    "background_size_cover": "Cover (Cover)",
+    "background_size_contain": "Contain (Contain)",
+    "background_size_fill": "Fill (Fill)",
+    "background_size_auto": "Original Size (Auto)",
+    "color_default": "Default",
+    "color_custom": "Custom",
+    "edit_color_light": "Light",
+    "edit_color_dark": "Dark",
+    "edit_color_light_acrylic": "Light Acrylic",
+    "edit_color_dark_acrylic": "Dark Acrylic",
+    "theme_auto": "Follow System",
+    "theme_light": "Light",
+    "theme_dark": "Dark",
+    "font_system_default": "System Default",
+    "paste_json": "Please paste JSON",
+    "command_day": "Day",
+    "command_night": "Night",
+    "command_clear": "Clear",
+    "command_rain": "Rain",
+    "command_save": "Save",
+    "command_list": "Player List",
+    "command_keep_inventory_on": "Keep Inventory On",
+    "command_keep_inventory_off": "Keep Inventory Off",
+    "command_mob_griefing_off": "Mob Griefing Off",
+    "enter_command": "Enter command... (Tab to complete)",
+    "select_java_path": "Please select Java path",
+    "enter_server_name": "Please enter server name",
+    "java_64bit": "64-bit",
+    "java_32bit": "32-bit",
+    "unknown": "Unknown",
+    "quote_text": "We built the skeleton, and the soul is entrusted to you.",
+    "click_to_refresh": "Click to refresh",
+    "edit_server_name": "Edit server name",
+    "config_all": "All",
+    "config_network": "Network",
+    "config_player": "Player",
+    "config_game": "Game",
+    "config_world": "World",
+    "config_performance": "Performance",
+    "config_display": "Display",
+    "config_other": "Other",
+    "config_saved": "Config saved"
   },
   "sidebar": {
     "groups": {
@@ -25,7 +99,8 @@
     "language": "Language",
     "chinese": "简体中文",
     "english": "English",
-    "chinese_tw": "繁體中文"
+    "chinese_tw": "繁體中文",
+    "chinese_jb": "梗体中文"
   },
   "home": {
     "title": "Server Management",
@@ -50,11 +125,6 @@
     "delete_cancel": "Cancel",
     "delete_confirm": "Confirm Delete",
     "delete_error": "Server name input error, please re-enter",
-    "close_action": "Close Behavior",
-    "close_action_desc": "Select default behavior when clicking the close button",
-    "close_action_ask": "Ask",
-    "close_action_minimize": "Minimize to Tray",
-    "close_action_close": "Close Directly",
     "close_window_title": "Close Window",
     "close_window_message": "Are you sure you want to close SeaLantern?",
     "remember_choice": "Remember my choice"
@@ -216,11 +286,11 @@
     "title": "Settings",
     "auto_stop": "Auto stop servers when closing",
     "auto_eula": "Auto agree EULA",
-    "close_behavior": "Close Behavior",
-    "close_behavior_desc": "Select behavior when clicking close button",
-    "close_behavior_minimize": "Minimize to Tray",
-    "close_behavior_ask": "Ask",
-    "close_behavior_exit": "Exit Directly",
+    "close_action": "Close Behavior",
+    "close_action_desc": "Select behavior when clicking close button",
+    "close_action_minimize": "Minimize to Tray",
+    "close_action_ask": "Ask",
+    "close_action_close": "Exit Directly",
     "default_memory": "Default Memory",
     "default_port": "Default Port",
     "jvm_args": "JVM Arguments",
