feat(ui): 优化主页布局并添加服务器路径格式化功能
- 重新设计主页卡片布局，提升视觉一致性
- 添加 formatServerPath 函数格式化服务器路径显示
- 使用 SVG 图标🗿
- 调整服务器卡片样式

- 移动名言展示位置至左边的启动卡片
- 更新多语言翻译文件，添加 refresh 和 save 字段

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -74,7 +74,7 @@
     "java_64bit": "64-bit",
     "java_32bit": "32-bit",
     "unknown": "Unknown",
-    "quote_text": "We built the skeleton, and the soul is entrusted to you.",
+    "quote_text": "We built the skeleton, and the soul is up to you.",
     "click_to_refresh": "Click to refresh",
     "edit_server_name": "Edit server name",
     "config_all": "All",
@@ -85,7 +85,9 @@
     "config_performance": "Performance",
     "config_display": "Display",
     "config_other": "Other",
-    "config_saved": "Config saved"
+    "config_saved": "Config saved",
+    "refresh": "Refresh",
+    "save": "Save"
   },
   "sidebar": {
     "groups": {
