--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -177,6 +177,7 @@
     "enter_command_content": "输入指令内容",
     "cancel": "取消",
     "delete": "删除",
+    "save": "保存",
     "add": "添加",
     "update": "更新",
     "back_to_bottom": "回到底部",
