feat(配置): 重构配置页面并添加自动保存功能
- 重构配置页面布局，将搜索功能移至分类选择组件
- 添加配置项自动保存刷新功能，使用防抽风（交互间隔）优化性能
- 移除工具栏中的刷新和保存按钮
- 更新多语言翻译文件，添加缺失的配置项翻译
- 修改默认回退语言为英文
- 优化配置项切换组件使用自定义开关
- 合并后端关闭处理逻辑，由前端ui处理

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -269,7 +269,42 @@
       "enable-status": "Enable Server List Status",
       "force-gamemode": "Force Game Mode",
       "spawn-protection": "Spawn Protection Radius",
-      "sync-chunk-writes": "Sync Chunk Writes"
+      "sync-chunk-writes": "Sync Chunk Writes",
+      "accepts-transfers": "Accept Transfers",
+      "broadcast-console-to-ops": "Broadcast Console to Ops",
+      "broadcast-rcon-to-ops": "Broadcast RCON to Ops",
+      "bug-report-link": "Bug Report Link",
+      "enable-jmx-monitoring": "Enable JMX Monitoring",
+      "enforce-secure-profile": "Enforce Secure Profile",
+      "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
+      "function-permission-level": "Function Permission Level",
+      "generator-settings": "Generator Settings",
+      "hide-online-players": "Hide Online Players",
+      "initial-disabled-packs": "Initial Disabled Packs",
+      "initial-enabled-packs": "Initial Enabled Packs",
+      "log-ips": "Log IPs",
+      "max-chained-neighbor-updates": "Max Chained Neighbor Updates",
+      "max-world-size": "Max World Size",
+      "online-mode": "Online Mode",
+      "op-permission-level": "OP Permission Level",
+      "pause-when-empty-seconds": "Pause When Empty Seconds",
+      "player-idle-timeout": "Player Idle Timeout",
+      "prevent-proxy-connections": "Prevent Proxy Connections",
+      "query.port": "Query Port",
+      "rate-limit": "Rate Limit",
+      "rcon.password": "RCON Password",
+      "rcon.port": "RCON Port",
+      "region-file-compression": "Region File Compression",
+      "require-resource-pack": "Require Resource Pack",
+      "resource-pack": "Resource Pack URL",
+      "resource-pack-id": "Resource Pack ID",
+      "resource-pack-prompt": "Resource Pack Prompt",
+      "resource-pack-sha1": "Resource Pack SHA1",
+      "text-filtering-config": "Text Filtering Config",
+      "text-filtering-version": "Text Filtering Version",
+      "server-ip": "Server IP",
+      "use-native-transport": "Use Native Transport",
+      "white-list": "White List"
     }
   },
   "players": {
