--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -269,7 +269,40 @@
       "enable-status": "Estado del servidor",
       "force-gamemode": "Forzar modo",
       "spawn-protection": "Protección de spawn",
-      "sync-chunk-writes": "Sincronización de chunks"
+      "sync-chunk-writes": "Sincronización de chunks",
+      "accepts-transfers": "Aceptar transferencias",
+      "broadcast-console-to-ops": "Transmitir consola a ops",
+      "broadcast-rcon-to-ops": "Transmitir RCON a ops",
+      "bug-report-link": "Enlace de informe de errores",
+      "enable-jmx-monitoring": "Habilitar monitorización JMX",
+      "enforce-secure-profile": "Forzar perfil seguro",
+      "entity-broadcast-range-percentage": "Porcentaje de rango de transmisión de entidades",
+      "function-permission-level": "Nivel de permiso de función",
+      "generator-settings": "Configuración del generador",
+      "hide-online-players": "Ocultar jugadores en línea",
+      "initial-disabled-packs": "Paquetes deshabilitados iniciales",
+      "initial-enabled-packs": "Paquetes habilitados iniciales",
+      "log-ips": "Registrar IPs",
+      "max-chained-neighbor-updates": "Máximas actualizaciones encadenadas de vecinos",
+      "max-world-size": "Tamaño máximo del mundo",
+      "online-mode": "Modo en línea",
+      "op-permission-level": "Nivel de permiso de OP",
+      "pause-when-empty-seconds": "Segundos de pausa cuando esté vacío",
+      "player-idle-timeout": "Tiempo de inactividad del jugador",
+      "prevent-proxy-connections": "Prevenir conexiones proxy",
+      "query.port": "Puerto Query",
+      "rate-limit": "Límite de velocidad",
+      "rcon.password": "Contraseña RCON",
+      "rcon.port": "Puerto RCON",
+      "region-file-compression": "Compresión de archivos de región",
+      "require-resource-pack": "Requerir paquete de recursos",
+      "resource-pack": "URL del paquete de recursos",
+      "resource-pack-id": "ID del paquete de recursos",
+      "resource-pack-prompt": "Mensaje del paquete de recursos",
+      "resource-pack-sha1": "SHA1 del paquete de recursos",
+      "server-ip": "IP del servidor",
+      "use-native-transport": "Usar transporte nativo",
+      "white-list": "Lista blanca"
     }
   },
   "players": {
