--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -269,7 +269,40 @@
       "enable-status": "サーバー状態表示",
       "force-gamemode": "ゲームモード強制",
       "spawn-protection": "スポーン保護半径",
-      "sync-chunk-writes": "チャンク書き込み同期"
+      "sync-chunk-writes": "チャンク書き込み同期",
+      "accepts-transfers": "転送を受け入れる",
+      "broadcast-console-to-ops": "コンソールをOPにブロードキャスト",
+      "broadcast-rcon-to-ops": "RCONをOPにブロードキャスト",
+      "bug-report-link": "バグレポートリンク",
+      "enable-jmx-monitoring": "JMXモニタリングを有効にする",
+      "enforce-secure-profile": "セキュアプロファイルを強制",
+      "entity-broadcast-range-percentage": "エンティティブロードキャスト範囲割合",
+      "function-permission-level": "関数権限レベル",
+      "generator-settings": "ジェネレーター設定",
+      "hide-online-players": "オンラインプレイヤーを非表示",
+      "initial-disabled-packs": "初期無効パック",
+      "initial-enabled-packs": "初期有効パック",
+      "log-ips": "IPをログに記録",
+      "max-chained-neighbor-updates": "最大連鎖近隣更新",
+      "max-world-size": "最大ワールドサイズ",
+      "online-mode": "オンラインモード",
+      "op-permission-level": "OP権限レベル",
+      "pause-when-empty-seconds": "空の時のポーズ秒数",
+      "player-idle-timeout": "プレイヤーアイドルタイムアウト",
+      "prevent-proxy-connections": "プロキシ接続を防止",
+      "query.port": "Queryポート",
+      "rate-limit": "レート制限",
+      "rcon.password": "RCONパスワード",
+      "rcon.port": "RCONポート",
+      "region-file-compression": "リージョンファイル圧縮",
+      "require-resource-pack": "リソースパックを要求",
+      "resource-pack": "リソースパックURL",
+      "resource-pack-id": "リソースパックID",
+      "resource-pack-prompt": "リソースパックプロンプト",
+      "resource-pack-sha1": "リソースパックSHA1",
+      "server-ip": "サーバーIP",
+      "use-native-transport": "ネイティブトランスポートを使用",
+      "white-list": "ホワイトリスト"
     }
   },
   "players": {
