--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -229,6 +229,7 @@
       "display": "显示",
       "other": "其他"
     },
+    "default": "默认值",
     "gamemode": {
       "survival": "生存",
       "creative": "创造",
@@ -272,7 +273,82 @@
       "enable-status": "启用服务器列表状态",
       "force-gamemode": "强制游戏模式",
       "spawn-protection": "出生点保护半径",
-      "sync-chunk-writes": "同步区块写入"
+      "sync-chunk-writes": "同步区块写入",
+      "resource-pack": "资源包URL",
+      "resource-pack-id": "资源包ID",
+      "resource-pack-prompt": "资源包提示",
+      "resource-pack-sha1": "资源包SHA1哈希",
+      "text-filtering-config": "文本过滤配置",
+      "text-filtering-version": "文本过滤版本",
+      "broadcast-rcon-to-ops": "向OP广播RCON消息",
+      "bug-report-link": "Bug报告链接",
+      "enable-jmx-monitoring": "启用JMX监控",
+      "enforce-secure-profile": "强制安全配置文件",
+      "entity-broadcast-range-percentage": "实体广播范围百分比",
+      "function-permission-level": "函数权限级别",
+      "generator-settings": "生成器设置",
+      "hide-online-players": "隐藏在线玩家",
+      "initial-disabled-packs": "初始禁用的数据包",
+      "accepts-transfers": "接受传输",
+      "allow-flight": "允许飞行",
+      "allow-nether": "允许下界",
+      "broadcast-console-to-ops": "向OP广播控制台消息",
+      "broadcast-rcon-to-ops": "向OP广播RCON消息",
+      "bug-report-link": "Bug报告链接",
+      "difficulty": "游戏难度",
+      "enable-command-block": "启用命令方块",
+      "enable-jmx-monitoring": "启用JMX监控",
+      "enable-query": "启用Query协议",
+      "enable-rcon": "启用RCON远程控制",
+      "enable-status": "启用服务器列表状态",
+      "enforce-secure-profile": "强制安全配置文件",
+      "enforce-whitelist": "强制白名单",
+      "entity-broadcast-range-percentage": "实体广播范围百分比",
+      "force-gamemode": "强制游戏模式",
+      "function-permission-level": "函数权限级别",
+      "gamemode": "默认游戏模式",
+      "generate-structures": "生成结构",
+      "generator-settings": "生成器设置",
+      "hardcore": "极限模式",
+      "hide-online-players": "隐藏在线玩家",
+      "initial-enabled-packs": "初始启用的数据包",
+      "level-name": "世界名称",
+      "level-seed": "世界种子",
+      "level-type": "世界类型",
+      "log-ips": "记录IP地址",
+      "max-chained-neighbor-updates": "最大连锁邻居更新",
+      "max-players": "最大玩家数",
+      "max-tick-time": "最大tick时间",
+      "max-world-size": "最大世界大小",
+      "motd": "服务器描述(MOTD)",
+      "network-compression-threshold": "网络压缩阈值",
+      "online-mode": "正版验证",
+      "op-permission-level": "OP权限级别",
+      "pause-when-empty-seconds": "空服务器暂停秒数",
+      "player-idle-timeout": "玩家空闲超时",
+      "prevent-proxy-connections": "防止代理连接",
+      "pvp": "允许PVP",
+      "query.port": "Query端口",
+      "rate-limit": "速率限制",
+      "rcon.password": "RCON密码",
+      "rcon.port": "RCON端口",
+      "region-file-compression": "区域文件压缩",
+      "require-resource-pack": "要求资源包",
+      "resource-pack": "资源包URL",
+      "resource-pack-id": "资源包ID",
+      "resource-pack-prompt": "资源包提示",
+      "resource-pack-sha1": "资源包SHA1哈希",
+      "server-ip": "服务器IP",
+      "server-port": "服务器端口",
+      "simulation-distance": "模拟距离",
+      "spawn-monsters": "生成怪物",
+      "spawn-protection": "出生点保护半径",
+      "sync-chunk-writes": "同步区块写入",
+      "text-filtering-config": "文本过滤配置",
+      "text-filtering-version": "文本过滤版本",
+      "use-native-transport": "使用原生传输",
+      "view-distance": "视距",
+      "white-list": "白名单"
     }
   },
   "players": {
