--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -268,7 +268,72 @@
       "enable-status": "啟用伺服器列表狀態",
       "force-gamemode": "強制遊戲模式",
       "spawn-protection": "出生點保護半徑",
-      "sync-chunk-writes": "同步區塊寫入"
+      "sync-chunk-writes": "同步區塊寫入",
+"resource-pack": "資源包URL",
+"resource-pack-id": "資源包ID",
+"resource-pack-prompt": "資源包提示",
+"resource-pack-sha1": "資源包SHA1哈希",
+"text-filtering-config": "文字過濾設定",
+"text-filtering-version": "文字過濾版本",
+"broadcast-rcon-to-ops": "向OP廣播RCON訊息",
+"bug-report-link": "Bug回報連結",
+"enable-jmx-monitoring": "啟用JMX監控",
+"enforce-secure-profile": "強制安全設定檔",
+"entity-broadcast-range-percentage": "實體廣播範圍百分比",
+"function-permission-level": "函數權限等級",
+"generator-settings": "生成器設定",
+"hide-online-players": "隱藏線上玩家",
+"initial-disabled-packs": "初始停用的資料包",
+"accepts-transfers": "接受傳輸",
+"allow-flight": "允許飛行",
+"allow-nether": "允許地獄",
+"broadcast-console-to-ops": "向OP廣播控制台訊息",
+"difficulty": "難度",
+"enable-command-block": "啟用指令方塊",
+"enable-query": "啟用Query協定",
+"enable-rcon": "啟用RCON遠端控制",
+"enable-status": "啟用伺服器列表狀態",
+"enforce-whitelist": "強制白名單",
+"force-gamemode": "強制遊戲模式",
+"gamemode": "預設遊戲模式",
+"generate-structures": "生成結構",
+"hardcore": "極限模式",
+"initial-enabled-packs": "初始啟用的資料包",
+"level-name": "世界名稱",
+"level-seed": "世界種子",
+"level-type": "世界類型",
+"log-ips": "記錄IP位址",
+"max-chained-neighbor-updates": "最大連鎖鄰近更新",
+"max-players": "最大玩家數",
+"max-tick-time": "最大Tick時間",
+"max-world-size": "最大世界大小",
+"motd": "伺服器描述(MOTD)",
+"op-permission-level": "OP權限等級",
+"pause-when-empty-seconds": "空伺服器暫停秒數",
+"player-idle-timeout": "玩家閒置逾時",
+"prevent-proxy-connections": "防止代理連線",
+"pvp": "允許PVP",
+"query.port": "Query埠號",
+"rate-limit": "速率限制",
+"rcon.password": "RCON密碼",
+"rcon.port": "RCON埠號",
+"region-file-compression": "區域檔案壓縮",
+"require-resource-pack": "要求資源包",
+"resource-pack": "資源包URL",
+"resource-pack-id": "資源包ID",
+"resource-pack-prompt": "資源包提示",
+"resource-pack-sha1": "資源包SHA1雜湊",
+"server-ip": "伺服器IP",
+"server-port": "伺服器埠號",
+"simulation-distance": "模擬距離",
+"spawn-monsters": "生成怪物",
+"spawn-protection": "重生點保護半徑",
+"sync-chunk-writes": "同步區塊寫入",
+"text-filtering-config": "文字過濾設定",
+"text-filtering-version": "文字過濾版本",
+"use-native-transport": "使用原生傳輸",
+"view-distance": "視距",
+"white-list": "白名單"
     }
   },
   "players": {
