--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -269,7 +269,23 @@
       "enable-status": "Bật trạng thái máy chủ",
       "force-gamemode": "Ép chế độ chơi",
       "spawn-protection": "Bán kính bảo vệ spawn",
-      "sync-chunk-writes": "Đồng bộ ghi chunk"
+      "sync-chunk-writes": "Đồng bộ ghi chunk",
+      "resource-pack": "URL gói tài nguyên",
+      "resource-pack-id": "ID gói tài nguyên",
+      "resource-pack-prompt": "Lời nhắc gói tài nguyên",
+      "resource-pack-sha1": "Mã băm SHA1 gói tài nguyên",
+      "text-filtering-config": "Cấu hình lọc văn bản",
+      "text-filtering-version": "Phiên bản lọc văn bản",
+      "broadcast-rcon-to-ops": "Phát RCON tới OP",
+      "bug-report-link": "Liên kết báo lỗi",
+      "enable-jmx-monitoring": "Bật giám sát JMX",
+      "enforce-secure-profile": "Ép buộc hồ sơ bảo mật",
+      "entity-broadcast-range-percentage": "% phạm vi phát thực thể",
+      "function-permission-level": "Cấp quyền hàm",
+      "generator-settings": "Cài đặt trình tạo",
+      "hide-online-players": "Ẩn người chơi trực tuyến",
+      "initial-disabled-packs": "Gói dữ liệu tắt ban đầu",
+      "accepts-transfers": "Chấp nhận chuyển"
     }
   },
   "players": {
