--- a/src/locales/zh-ME.json
+++ b/src/locales/zh-ME.json
@@ -269,7 +269,23 @@
       "enable-status": "显示在列表里",
       "force-gamemode": "强制游戏模式",
       "spawn-protection": "出生点保护多大",
-      "sync-chunk-writes": "同步区块写入"
+      "sync-chunk-writes": "同步区块写入喵",
+      "resource-pack": "资源包URL喵",
+      "resource-pack-id": "资源包ID喵",
+      "resource-pack-prompt": "资源包提示喵",
+      "resource-pack-sha1": "资源包SHA1哈希喵",
+      "text-filtering-config": "文本过滤配置喵",
+      "text-filtering-version": "文本过滤版本喵",
+      "broadcast-rcon-to-ops": "给大猫猫广播RCON消息喵",
+      "bug-report-link": "Bug报告链接喵",
+      "enable-jmx-monitoring": "启用JMX监控喵",
+      "enforce-secure-profile": "强制安全配置文件喵",
+      "entity-broadcast-range-percentage": "实体广播范围百分比喵",
+      "function-permission-level": "函数权限级别喵",
+      "generator-settings": "生成器设置喵",
+      "hide-online-players": "藏起在线玩家喵",
+      "initial-disabled-packs": "一开始不给玩的喵包",
+      "accepts-transfers": "接受传输喵"
     }
   },
   "players": {
